# spike-k8s-instances-mngmt

./: Dockerfile  Dockerfile-worker  Makefile  README.md  docker-compose.yml  docker-entrypoint-worker.sh  docker-entrypoint.sh  pyproject.toml
.vim/: coc-settings.json
deploy/: cluster.yaml  pod-rabbitmq.yaml  pod-spike-api.yaml  pod-spike-worker.yaml  roles.yaml
instances_management/: celery.py  create_deployment.py  main.py  max_prime.py
instances_management/__pycache__/: main.cpython-38.pyc.139883306542224
tests/: test_instances_management.py
