[tool.poetry]
name = "instances-management"
version = "0.1.0"
description = ""
authors = ["Luigi Bertaco Cristofolini <luigibertaco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.0.5"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
black = "^20.8b1"
kubernetes = "^12.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
